--- a/client/src/app/customer/footer/footer.component.css
+++ b/client/src/app/customer/footer/footer.component.css
@@ -1,5 +1,5 @@
 .newsletter {
-    border: 2px solid rgb(108, 108, 108);
+    border: 2px solid ;
     border-radius: 3px;
 }
 
